[project]
name = "llm-provider"
version = "0.9.0"
description = "Minimal pluggable LLM provider abstraction (Claude + OpenAI + Ollama)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.52"]
openai = ["openai>=1.0"]
ollama = ["httpx>=0.28"]
pydantic = ["pydantic>=2.0"]
all = ["anthropic>=0.52", "openai>=1.0", "httpx>=0.28", "pydantic>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "anthropic>=0.52", "openai>=1.0", "httpx>=0.28", "pydantic>=2.0"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
